--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,4 +2,24 @@ ja:
   activerecord:
     attributes:
       user:
-        nickname: ニックネーム
+        nickname: "ニックネーム"
+        last_name: "姓"
+        first_name: "名"
+        last_name_kana: "姓（カナ）"
+        first_name_kana: "名（カナ）"
+        user_birth_date: "生年月日"
+    errors:
+      models:
+        user:
+          attributes:
+            password:
+              invalid: "には英字と数字の両方を含めて設定してください"
+            last_name:
+              invalid: "全角文字で入力してください"
+            first_name:
+              invalid: "全角文字で入力してください"
+            last_name_kana:
+              invalid: "全角カタカナで入力してください"
+            first_name_kana:
+              invalid: "全角カタカナで入力してください"
+          blank: "を入力してください"
